# module-intervenants

./: README.md  SYNTHESE_PROJET.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260224_000001_initial_schema.py
backend/app/: main.py  seed.py
backend/app/api/routes/: affectations.py  etudes.py  health.py  intervenants.py
backend/app/core/: config.py  database.py  errors.py
backend/app/models/: __init__.py  affectation.py  base.py  etude.py  intervenant.py
backend/app/repositories/: __init__.py  affectations.py  etudes.py  intervenants.py
backend/app/schemas/: __init__.py  affectation.py  common.py  etude.py  intervenant.py
backend/app/services/: __init__.py  affectations.py  etudes.py  intervenants.py
backend/tests/: test_health.py  test_schemas.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: api.ts
frontend/src/components/: AffectationForm.tsx  EtudesEnCoursSection.tsx  IntervenantForm.tsx  IntervenantsTable.tsx  PageHeader.tsx  SearchBar.tsx
frontend/src/types/: types.ts
frontend/src/utils/: moduleMetrics.ts
frontend/tests/: moduleMetrics.test.ts
