[project]
name = "backend"
version = "0.1.0"
description = "Backend FastAPI pour le module Intervenants et disponibilites"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.131.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[project.scripts]
backend = "app.main:run"
seed-data = "app.seed:main"
